# car-simulator

./: CMakeLists.txt  Car.pro  README.md  indicator.cpp  indicator.h  mainwindow.cpp  mainwindow.h  map.cpp  map.h  map.qml  meter.cpp  meter.h  musicplayer.cpp  musicplayer.h  resources.qrc
